<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?attr/colorPrimary">

    <!-- Username EditText -->
    <EditText
        android:id="@+id/etLogin"
        style="@style/CustomEditTextStyle"
        android:layout_marginTop="@dimen/pad16"
        android:hint="@string/login_txt"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:nextFocusForward="@id/etPassword"/>

    <!-- Password EditText -->
    <EditText
        android:id="@+id/etPassword"
        style="@style/CustomEditTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <!-- Create User Button -->
    <Button
        android:id="@+id/btnLogin"
        style="@style/CustomButtonStyle"
        android:layout_gravity="center"
        android:text="@string/login" />

</LinearLayout>
