<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">

    <!-- Username EditText -->
    <EditText
        android:id="@+id/loginEditText"
        style="@style/CustomEditTextStyle"
        android:layout_marginTop="@dimen/pad16"
        android:hint="@string/login_txt"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:nextFocusForward="@id/etPassword"/>

    <!-- Password EditText -->
    <EditText
        android:id="@+id/passwordEditText"
        style="@style/CustomEditTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <!-- Create User Button -->
    <Button
        android:id="@+id/createUserButton"
        android:text="@string/create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="16sp"
        android:backgroundTint="@color/light_blue"/>

</LinearLayout>
