<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    >

    <!-- TextView at the Top -->
    <TextView
        android:id="@+id/textViewAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_about"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textColor="?attr/colorSecondary"
        android:layout_gravity="center_horizontal" />

    <!-- Spacer to push content to the bottom -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Lower TextViews at the Bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <!-- Name -->
        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24sp"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold" />

        <!-- Group -->
        <TextView
            android:id="@+id/textViewGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:textSize="20sp"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="8dp" />

        <!-- Made in 2023 -->
        <TextView
            android:id="@+id/textViewMadeIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/madeindate"
            android:textSize="18sp"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="8dp" />
    </LinearLayout>

</LinearLayout>
